--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,3 +1,27 @@
+
+# CTS P-C
+
+@article{straus1998identification,
+  title={Identification of child maltreatment with the Parent-Child Conflict Tactics Scales: Development and psychometric data for a national sample of American parents},
+  author={Straus, Murray A and Hamby, Sherry L and Finkelhor, David and Moore, David W and Runyan, Desmond},
+  journal={Child abuse \& neglect},
+  volume={22},
+  number={4},
+  pages={249--270},
+  year={1998},
+  publisher={Elsevier}
+}
+# ELLIOT
+@article{huizinga1986reassessing,
+  title={Reassessing the reliability and validity of self-report delinquency measures},
+  author={Huizinga, David and Elliott, Delbert S},
+  journal={Journal of quantitative criminology},
+  volume={2},
+  pages={293--327},
+  year={1986},
+  publisher={Springer}
+}
+
 # LEC-5
 @article{gray2004psychometric,
   title={Psychometric properties of the life events checklist},
